# celeste_extractor

./: Cargo.toml
src/: main.rs
