[package]
name = "celeste_extractor"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
anyhow = "1.0.40"
byteorder = "1.4.3"
walkdir = "2.3.2"
